<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 Andrei Olaru, Marius-Tudor Benea, Nguyen Thi Thuy Nga, Amal El Fallah Seghrouchni, Cedric Herpson.
  
  This file is part of tATAmI-Android.
  
  tATAmI-Android is free software: you can redistribute it and/or modify it under the terms of the GNU Lesser General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
  
  tATAmI-Android is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License along with tATAmI-Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">tATAmI</string>
    <string name="host_label">Host:</string>
    <string name="default_host">10.0.2.2</string>
    <string name="port_label">Port:</string>
    <string name="default_port">1099</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="container_label">Container name:</string>
    <string name="default_container">AliceContainer</string>
    <string name="local_host">localhost</string>
    <string name="local_port">1098</string>
    <string name="localhost_label">Local host:</string>
    <string name="localport_label">Local port:</string>
    <string name="connection_tab_indicator">Connection</string>
    <string name="log_tab_indicator">Log</string>
    <string name="agents_tab_indicator">Agents</string>
    <string name="agent_gui">Agent</string>
    <string name="s_claim">S-CLAIM</string>
    <string name="agent_name">AgentName</string>
    <string name="show_agent">Show Agent</string>
</resources>
